updated gms version and fixed config path

--- a/src/cordova/plugin.xml
+++ b/src/cordova/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" 
-        id="cocoon-plugin-social-android-googleplaygames" version="2.0.0">
+        id="cocoon-plugin-social-android-googleplaygames" version="2.0.1">
     <name>CocoonGooglePlayGames</name>
     <description>Android Google Play Games API</description>
     <license>MPL 2.0</license>
@@ -13,11 +13,11 @@
         <source-file src="src/android/GPUtils.java" target-dir="src/com/ludei/googleplaygames" />
         <source-file src="src/android/GPGPlugin.java" target-dir="src/com/ludei/googleplaygames/cordova" />
 
-        <config-file target="app/src/main/res/xml/config.xml" parent="/*">
+       <config-file target="res/xml/config.xml" parent="/*">
             <feature name="LDGooglePlayGamesPlugin" >
                 <param name="android-package" value="com.ludei.googleplaygames.cordova.GPGPlugin"/>
             </feature>
-        </config-file>
+        </config-file>     
 
         <config-file target="app/src/main/AndroidManifest.xml" parent="/manifest/application">
             <meta-data
@@ -34,8 +34,8 @@
             <string name="app_id">$APP_ID</string>
         </config-file>
 
-        <framework src="com.google.android.gms:play-services-games:9.0.2" />
-        <framework src="com.google.android.gms:play-services-plus:9.0.2" />
+        <framework src="com.google.android.gms:play-services-games:16.0.0" />
+        <framework src="com.google.android.gms:play-services-plus:16.0.0" />
 
         <js-module src="www/cocoon_googleplaygames.js" name="GooglePlayGames">
             <runs/>
